--- a/app/src/main/res/layout/fragment_empty_address_book.xml
+++ b/app/src/main/res/layout/fragment_empty_address_book.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".UI.AccountAndWallet.AcountWalletFragments.EmptyAddressBook">
 
-    <!-- TODO: Update blank fragment layout -->
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -31,38 +31,155 @@
                     app:cardElevation="4dp">
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="23dp"
-                        android:layout_marginTop="28dp"
-                        android:text="Billing Address"
-                        android:textColor="@color/black"
-                        android:textFontWeight="700"
-                        android:textSize="14sp" />
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="23dp"
+                            android:layout_marginTop="28dp"
+                            android:text="Billing Address"
+                            android:textColor="@color/black"
+                            android:textFontWeight="700"
+                            android:textSize="14sp" />
 
                         <TextView
+                            android:id="@+id/billingAddressText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="89dp"
+                            android:layout_marginTop="44dp"
                             android:gravity="center_horizontal"
+                            android:visibility="visible"
+                            android:layout_marginBottom="44dp"
                             android:text="Looks like you’ve not added\na Billing address yet!" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="gone"
+                            android:id="@+id/billingAddressBox">
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="48dp"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="12dp"
+                                        android:text="Name"
+                                        android:textColor="@color/black"
+                                        android:textFontWeight="400"
+                                        android:textSize="12sp" />
+
+
+                                    <TextView
+                                        android:id="@+id/billingAddressName"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Nikkitha Shanker"
+                                        android:textColor="@color/black"
+                                        android:textFontWeight="500"
+                                        android:textSize="12sp" />
+
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="12dp"
+                                        android:text="Contact Number"
+                                        android:textColor="@color/black"
+                                        android:textFontWeight="500"
+                                        android:textSize="12sp" />
+
+                                    <TextView
+                                        android:id="@+id/billingContactNumber"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="+9714702 4444"
+                                        android:textColor="@color/black"
+                                        android:textFontWeight="500"
+                                        android:textSize="12sp"
+                                        android:textStyle="bold" />
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="48dp"
+                            android:orientation="vertical"
+                            tools:ignore="ExtraText"
+                            android:layout_marginBottom="20dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Billing Address"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="12sp" />
+
+
+                            <TextView
+                                android:id="@+id/billingAddress"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="12dp"
+                                android:text="Banks Residence, Bel-Air, \nLos Angeles,\nCalifornia, USA - 21014"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+
+
+                            <TextView
+                                android:id="@+id/billingAddressEdit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginRight="12dp"
+                                android:text="@string/edit"
+                                android:textColor="#3A5FD8"
+                                android:textFontWeight="500"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+                        </LinearLayout>
 
                         <com.google.android.material.button.MaterialButton
-                            android:id="@+id/billingAddAdrsBtn"
+                            android:id="@+id/billingAddAddressBtn"
                             android:layout_width="138dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="43dp"
+                            android:layout_height="32dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginBottom="27dp"
+                            android:layout_marginBottom="20dp"
                             android:backgroundTint="@color/white"
                             android:padding="0dp"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
                             android:text="Add Address"
                             android:textAllCaps="false"
                             android:textColor="#2D8DFF"
@@ -173,9 +290,9 @@
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginLeft="30dp"
                                     android:background="@drawable/all_address_bg"
                                     app:boxStrokeWidth="0dp"
-                                    android:layout_marginLeft="30dp"
                                     app:boxStrokeWidthFocused="0dp"
                                     app:endIconTint="@color/hint_color"
                                     app:hintAnimationEnabled="false"
@@ -185,8 +302,8 @@
                                         android:id="@+id/allAddressSpinner"
                                         android:layout_width="wrap_content"
                                         android:layout_height="32dp"
-                                        android:hint="All Address"
                                         android:layout_gravity="right"
+                                        android:hint="All Address"
                                         android:inputType="none"
                                         android:paddingVertical="0dp"
                                         android:textColorHint="@color/black"
@@ -199,7 +316,6 @@
 
 
                         </LinearLayout>
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -255,6 +371,8 @@
                             android:textSize="12sp"
                             app:cornerRadius="5dp"
                             app:elevation="4dp" />
+
+
 
                     </LinearLayout>
 
