--- a/app/src/main/res/layout/single_order_layout.xml
+++ b/app/src/main/res/layout/single_order_layout.xml
@@ -2,98 +2,67 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="18dp">
 
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:src="@drawable/ic_personal_shopper"
+        android:id="@+id/singleOrderImage"/>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="28dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:layout_marginLeft="12dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/singleOrderImage"
-            android:layout_width="39dp"
-            android:layout_height="39dp"
-            android:src="@drawable/ic_personal_shopper" />
-
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:orientation="vertical">
+            android:text="Myntra"
+            android:id="@+id/orderWebsiteName"
+            android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/orderNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order No.: #RNDM04312"
+            android:textSize="10sp"
+            android:textColor="@color/black"
+            android:textFontWeight="500"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/orderDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="15 Dec 2020"
+        android:layout_gravity="center_vertical"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="5dp"
+        />
+    <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/viewMore">
+        <TextView
 
-            <TextView
-                android:id="@+id/orderWebsiteName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="500"
-                android:text="Myntra"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="500"
-                    android:text="Order No.:"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
-
-                <TextView
-                    android:id="@+id/orderNo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="500"
-                    android:text=" #RNDM04312"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp">
-
-            <TextView
-                android:id="@+id/orderDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="500"
-                android:text=" 15 Dec 2020"
-                android:textColor="@color/black"
-                android:textSize="10sp" />
-
-            <LinearLayout
-                android:id="@+id/ViewMoreOrder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="500"
-                    android:text="View Order"
-                    android:textColor="#3A5FD8"
-                    android:textSize="10sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center"
-                    android:paddingLeft="-7dp"
-                    android:src="@mipmap/right_arrow" />
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Order"
+            android:textColor="#3A5FD8"
+            android:textSize="10sp"
+            android:textFontWeight="500"/>
+        <ImageView
+            android:layout_marginLeft="2dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_arrow"/>
     </LinearLayout>
 </LinearLayout>
