--- a/app/src/main/res/layout/single_all_delivery_addresses.xml
+++ b/app/src/main/res/layout/single_all_delivery_addresses.xml
@@ -40,7 +40,8 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginLeft="15dp">
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp">
 
 
                     <TextView
@@ -142,6 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:layout_marginRight="15dp"
                     android:orientation="vertical">
 
                 <com.google.android.material.button.MaterialButton
