--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -154,7 +154,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="25dp"
                 android:letterSpacing="0.03"
-                android:layout_marginVertical="20dp"
+                android:layout_marginTop="51dp"
+                android:layout_marginBottom="46dp"
                 android:backgroundTint="@color/button_color"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
