--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -144,8 +144,7 @@
                 android:text="@string/use_this_address_to_shop_from_india"
                 android:textColor="@color/black"
                 android:textFontWeight="700"
-                android:textSize="23sp"
-                android:textStyle="bold" />
+                android:textSize="24sp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/startShoppingBtn"
